src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>ECCN_subECCN_Value__c</fullName>
        <label>ECCN.subECCN Value</label>
        <picklist>
            <picklistValues>
                <fullName>5D992.c</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5D991NR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5D002.a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5D002.b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5D002.c.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5D002.c.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5D992.a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5D992.b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAR99NR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENC_License_Category__c</fullName>
        <label>ENC License Category</label>
        <picklist>
            <picklistValues>
                <fullName>Mass Market Components: 742.15.b.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENC-Restricted: 740.17.b.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENC-Unrestricted: 740.17.b.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENC-Unrestricted: 740.17.b.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENC-Unrestricted: 740.17.b.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Market Finished Goods: 742.15.b.1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other 5A992.a and 5D992.a items</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Earliest_Competitive_App_Listing_Date__c</fullName>
        <description>First &quot;Date Sourced&quot; out of all the Competitive Source&apos;s listed.</description>
        <inlineHelpText>Earliest &quot;Date Sourced&quot; out of all competitive sources listed.</inlineHelpText>
        <label>Earliest Competitive App Listing Date</label>
        <summarizedField>Competitive_Source_Apps__c.Date_Sourced__c</summarizedField>
        <summaryForeignKey>Competitive_Source_Apps__c.Application__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exclusion_Filter_Rules_Copied__c</fullName>
        <description>Field used to document the Exclusion Filter Rules for IP team review</description>
        <inlineHelpText>Field used to document the Exclusion Filter Rules for IP team review</inlineHelpText>
        <label>Exclusion Filter Rules - Copied</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclusion_Filter_Rules_Status__c</fullName>
        <description>Status field for Exclusion Reports Filter Rules</description>
        <inlineHelpText>Status field for Exclusion Reports Filter Rules</inlineHelpText>
        <label>Exclusion Filter Rules Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclusion_Report_Status__c</fullName>
        <description>Status field for Exclusion Reports</description>
        <inlineHelpText>Status field for Exclusion Reports</inlineHelpText>
        <label>Exclusion Report Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclusion_Report__c</fullName>
        <description>Report to capture incorrectly applied Dev-Apps related to IP Settlements &amp; some IP Licenses</description>
        <inlineHelpText>Report to capture incorrectly applied Dev-Apps related to IP Settlements &amp; some IP Licenses</inlineHelpText>
        <label>Exclusion Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exclusivity_End__c</fullName>
        <description>When does the Exclusive period end?</description>
        <inlineHelpText>When does the Exclusive period end?</inlineHelpText>
        <label>Exclusivity End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusivity_Start__c</fullName>
        <description>When does the Exclusive period start?</description>
        <inlineHelpText>When does the Exclusive period start?</inlineHelpText>
        <label>Exclusivity Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusivity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this app is exclusive to Motorola</description>
        <inlineHelpText>Is this app Exclusive to Motorola?</inlineHelpText>
        <label>Exclusivity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Alpha__c</fullName>
        <label>Expected Alpha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Beta__c</fullName>
        <label>Expected Beta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_GM_Release_Candidate__c</fullName>
        <formula>Expected_GM__c -14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected GM minus two weeks</inlineHelpText>
        <label>Expected GM Release Candidate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_GM__c</fullName>
        <label>Expected GM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EzX__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on EzX?</inlineHelpText>
        <label>EzX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMD_Feature_ID__c</fullName>
        <label>FMD Feature ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Request_ID__c</fullName>
        <description>Corresponding Feature Request ID</description>
        <inlineHelpText>Corresponding Feature Request ID</inlineHelpText>
        <label>Corresponding Feature Request ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Rules_Owner__c</fullName>
        <description>Field to capture who is working on the filter rules for each of the Apps for Automation project</description>
        <inlineHelpText>Field to capture who is working on the filter rules for each of the Apps for Automation project</inlineHelpText>
        <label>Filter Rules Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMS_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Application a Google Mobile Service?</description>
        <inlineHelpText>Is this Application a Google Mobile Service?</inlineHelpText>
        <label>GMS App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GPPD_Automation_Implemented_in_Sandbox__c</fullName>
        <description>Field to show whether IP Settlement has been Automated in the SF Sandbox</description>
        <inlineHelpText>Field to show whether IP Settlement has been Automated in the SF Sandbox</inlineHelpText>
        <label>GPPD Automation Implemented in Sandbox</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPPD_Fields_Audit_Report__c</fullName>
        <description>Audit report URL for GPPD Fields required for IP Settlement Automation</description>
        <inlineHelpText>Audit report URL for GPPD Fields required for IP Settlement Automation</inlineHelpText>
        <label>GPPD Fields Audit Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GPPD_Fields__c</fullName>
        <description>GPPD Fields used by IP Licensing team to determine exposure and impact of IP Settlements.</description>
        <inlineHelpText>GPPD Fields used by IP Licensing team to determine exposure and impact of IP Settlements.</inlineHelpText>
        <label>GPPD Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Handango_Award__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Winner of a Handango App of the Year Award</description>
        <inlineHelpText>Winner of a Handango App of the Year Award</inlineHelpText>
        <label>Handango Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heap_Size__c</fullName>
        <label>Heap Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Settlement_License_Type__c</fullName>
        <description>Field for *IP-S* Automation project which captures whether the patent license is Perpetual or Term-based.  Resulting data will be fed into existing FR092649 and then field will be deleted.</description>
        <inlineHelpText>Field for *IP-S* Automation project which captures whether the patent license is Perpetual or Term-based.  Resulting data will be fed into existing FR092649 and then field will be deleted.</inlineHelpText>
        <label>IP Settlement License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inclusion_Filter_Rules_Copied__c</fullName>
        <description>Field used to document the Inclusion Filter Rules for IP team review</description>
        <inlineHelpText>Field used to document the Inclusion Filter Rules for IP team review</inlineHelpText>
        <label>Inclusion Filter Rules - Copied</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inclusion_Filter_Rules_Status__c</fullName>
        <description>Captures status of IP Settlement Rules for Inclusion Reports</description>
        <inlineHelpText>Captures status of IP Settlement Rules for Inclusion Reports</inlineHelpText>
        <label>Inclusion Filter Rules Status</label>
        <picklist>
            <picklistValues>
                <fullName>Rules Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inclusion_Report_Status__c</fullName>
        <description>Status of Inclusion Report</description>
        <inlineHelpText>Status of Inclusion Report</inlineHelpText>
        <label>Inclusion Report Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inclusion_Report__c</fullName>
        <description>Report that identifies the products that need related IP Settlements</description>
        <inlineHelpText>Report that identifies the products that need related IP Settlements</inlineHelpText>
        <label>Inclusion Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Influencing_Reason_Specific_Event__c</fullName>
        <description>If Event was selected as the Influencing Reason, which specific event?</description>
        <inlineHelpText>If Event was selected as the Influencing Reason, which specific event?</inlineHelpText>
        <label>Influencing Reason_Specific Event</label>
        <picklist>
            <controllingField>Influencing_Reason__c</controllingField>
            <picklistValues>
                <fullName>MOTODEV Summit - San Diego Oct&apos;09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTIA - San Diego Oct&apos;09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint Developer Conf - Santa Clara Oct&apos;09</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influencing_Reason__c</fullName>
        <description>What was the primary influencing reason that this app is being developed for Android?</description>
        <inlineHelpText>What was the primary influencing reason that this app is being developed for Android?</inlineHelpText>
        <label>Influencing Reason</label>
        <picklist>
            <controllingField>Motorola_Influenced_Android_Development__c</controllingField>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Store Pitch Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecosystem Pitch Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Ship_End_Date__c</fullName>
        <description>Sunset field VHD#86773</description>
        <inlineHelpText>The last day the contract would allow us to ship a previously built unit from the factory</inlineHelpText>
        <label>Inventory Ship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Java_or_Native__c</fullName>
        <label>Java or Native</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legally_Shippable__c</fullName>
        <description>Hidden concatenated field of all legally shippable countries for this application for Microgen</description>
        <inlineHelpText>Hidden concatenated field of all legally shippable countries for this application for Microgen</inlineHelpText>
        <label>Legally Shippable Countries Microgen</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leveraging_Motorola_Proprietary_APIs__c</fullName>
        <description>Whether or not the app needs Motorola APIs that are not accessed through Android in order to function</description>
        <inlineHelpText>Whether or not the app needs Motorola APIs that are not accessed through Android in order to function</inlineHelpText>
        <label>Leveraging Motorola Proprietary APIs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link to Google Doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MOTOREADY_App_Status__c</fullName>
        <description>Pertaining to App Risk Flag</description>
        <label>MOTOREADY App Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacture_End_Date__c</fullName>
        <description>Sunset field VHD#86773</description>
        <inlineHelpText>The last day the contract would allow us to manufacture a device with that app</inlineHelpText>
        <label>Manufacture End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <description>The name of this app on Android Market; visible only to ATS/DTS profiles</description>
        <inlineHelpText>The name of this app on Android Market; visible only to ATS/DTS profiles</inlineHelpText>
        <label>Market Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Review_Status__c</fullName>
        <label>Marketing Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_TradeMark_Comments__c</fullName>
        <label>Marketing/TradeMark Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memory_Size__c</fullName>
        <label>Memory Size</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Download__c</fullName>
        <inlineHelpText>How will the user download the app? (applies to demos and trials) e.g. WAP Link, OTA download, bundled in a memory card, etc.</inlineHelpText>
        <label>Method of Download</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Microgen_Application_ID__c</fullName>
        <description>Used to duplicate application id so Microgen webmethods can repost application id to it instead of overwriting the real field.</description>
        <label>Microgen Application ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microgen_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, this Application ID has been reviewed and royalty data related to it have been sent to Microgen.</inlineHelpText>
        <label>Microgen Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MotoPlay_Type__c</fullName>
        <label>MotoPlay Type</label>
        <picklist>
            <controllingField>Application_Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>Fishfood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dogfood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utililites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wearables</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motorola_Influenced_Android_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did Motorola influence the development of this app for Android</description>
        <inlineHelpText>Did Motorola influence the development of this app for Android?</inlineHelpText>
        <label>Motorola Influenced Android Development?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motorola_Proprietary_APIs_supported_list__c</fullName>
        <description>This is a list of the motorola proprietary api&apos;s. This is a required field is the &quot;leveraging motorola api&apos;s&quot; picklist is checked &quot;yes&quot;.</description>
        <label>Motorola Proprietary APIs supported list</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Fields__c</fullName>
        <description>Fields required out of NPI for Automation project</description>
        <inlineHelpText>Fields required out of NPI for Automation project</inlineHelpText>
        <label>NPI Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nokia_Showcased_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Showcased Apps on Nokia&apos;s MOSH beta site</description>
        <inlineHelpText>Showcased Apps on Nokia&apos;s MOSH beta site</inlineHelpText>
        <label>Nokia Showcased App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nokia_Top_10_Handango_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nokia Top 10 Handango App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nokia_Top_10_Handmark_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nokia Top 10 Handmark App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODM_Propriotory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ODM Proprietary OS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSS_Review_Status__c</fullName>
        <label>OSS Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSS_Review__c</fullName>
        <label>OSS Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTA_Replacement_Functionality__c</fullName>
        <description>Field to capture whether an application can be replaced through a software replacement over-the-air (OTA).</description>
        <inlineHelpText>Field to capture whether an application can be replaced through a software replacement over-the-air (OTA).</inlineHelpText>
        <label>OTA Replacement Functionality?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OTA_Upgrade_Functionality__c</fullName>
        <description>Field to capture whether an application can be provided as a software upgrade over-the-air (OTA).</description>
        <inlineHelpText>Field to capture whether an application can be provided as a software upgrade over-the-air (OTA).</inlineHelpText>
        <label>OTA Upgrade Functionality?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P2K_P08_1_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on P2K P08.1.2?</inlineHelpText>
        <label>P2K P08.1.2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <description>The name of the apk package if applicable</description>
        <inlineHelpText>Please enter the name of the apk package if applicable</inlineHelpText>
        <label>Package Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Palm_WebOS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Palm WebOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priv_Risk_Level__c</fullName>
        <label>Privacy Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Comments__c</fullName>
        <label>Privacy Review Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Review_Status__c</fullName>
        <label>Privacy Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Privacy Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Employee must be Active in the Core Directory</errorMessage>
            <filterItems>
                <field>Motorola_Core_Directory__c.HRStatus__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Applications (Privacy Reviewer)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pursue_for_China__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pursue for China?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIM_Blackberry_Top_10_Handango_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RIM/Blackberry Top 10 Handango App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIM_Blackberry_Top_10_Handmark_APp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RIM/Blackberry Top 10 Handmark App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RIM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on RIM?</inlineHelpText>
        <label>RIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank_Priority__c</fullName>
        <description>For Compliance/Privacy report sorting</description>
        <inlineHelpText>Used for sorting in Reporting/Dashboards</inlineHelpText>
        <label>Rank Priority</label>
        <picklist>
            <picklistValues>
                <fullName>3 - High Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Low Priority</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_End_Date__c</fullName>
        <description>Sunset field VHD#86773</description>
        <inlineHelpText>The last day the contract would allow us send out software with that app included in it (i.e. MOL)</inlineHelpText>
        <label>Release End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rev_Share_App_Microgen__c</fullName>
        <description>Hidden Microgen field used for backend processing.</description>
        <formula>if( Rev_Share_App__c = TRUE, &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden Microgen field used for backend processing.</inlineHelpText>
        <label>Rev Share App Microgen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Share_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rev Share App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rev_Share_Details__c</fullName>
        <label>Rev Share Details</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Royalty_Cumulative__c</fullName>
        <description>Requested field for Microgen</description>
        <inlineHelpText>Fed in nightly from SSAS via webMethods</inlineHelpText>
        <label>Royalty Cumulative</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Current__c</fullName>
        <defaultValue>Royalty_High__c</defaultValue>
        <label>Royalty Current</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Description__c</fullName>
        <description>What does the royalty cover?  What is Motorola paying for?</description>
        <inlineHelpText>What does the royalty cover?  What is Motorola paying for?</inlineHelpText>
        <label>Royalty Description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Royalty_High__c</fullName>
        <description>The highest possible amount for the Royalty.</description>
        <label>Royalty High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Low__c</fullName>
        <description>The lowest possible amount for the royalty</description>
        <label>Royalty Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Royalty_Payment_Attribute__c</fullName>
        <label>Royalty Payment Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>Allocated Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per-unit Cap Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per-unit Cap Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid Long-Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid Short-Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Table Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Table Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Table Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royalty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Shipment activation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rules_Development_Status__c</fullName>
        <description>Field to track Salesforce IT development status for IP Settlement automation</description>
        <inlineHelpText>Field to track Salesforce IT development status for IP Settlement automation</inlineHelpText>
        <label>Rules Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>SF IT - Rules Development Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SF IT - Rules Development Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF IT - Rules Development In Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF IT - Rules Development Approved</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SHOP4APPS_Availability__c</fullName>
        <description>Is this app available on SHOP4APPS, and if so, what region?</description>
        <inlineHelpText>Is this app available on SHOP4APPS, and if so, what region?</inlineHelpText>
        <label>SHOP4APPS Availability</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SW_Part_Number__c</fullName>
        <externalId>true</externalId>
        <label>SW Part Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>